--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "garipov.dinar@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": ">=4.2"
