--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
         "php": ">=5.4.0",
         "illuminate/support": ">=4.2"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~4.0"
+    },
     "autoload": {
         "psr-4": {
             "Gaaarfild\\LaravelNotifications\\": "src/"
