--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ language: php
 php:
  - 5.5
  - 5.6
- - hhvm
+matrix:
+    allow_failures:
+        - php: hhvm
 
 before_script:
  - composer install --dev --prefer-source --no-interaction
