--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
 language: php
 
 php:
- - 5.5
- - 5.6
- - hhvm
+    - 5.5
+    - 5.6
+    - hhvm
 
 matrix:
     allow_failures:
         - php: hhvm
 
 before_script:
- - composer install --dev --prefer-source --no-interaction
+    - composer self-update
+    - composer install --dev --prefer-source --no-interaction
 
-script: vendor/bin/phpunit
+script: phpunit
