--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ before_script:
     - composer self-update
     - composer install --dev --prefer-source --no-interaction
 
-script: phpunit
+script: vendor/bin/phpunit tests/NotificationsTest.php
